<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuantoTrade</string>
    <string name="format_price1">%1$.1f</string>
    <string name="format_price2">%1$.2f</string>
    <string name="format_price3">%1$.3f</string>
    <string name="format_price4">%1$.4f</string>
    <string name="format_price5">%1$.5f</string>
    <string name="text_account">Account</string>
    <string name="text_add">Add</string>
    <string name="text_addFunds">Add Funds</string>
    <string name="text_addToWatchList">Add To WatchList - %1$d</string>
    <string name="text_ask">Ask</string>
    <string name="text_availableMargin">Available margin (Cash + Collateral)</string>
    <string name="text_availableMarginLabel">Available Margin</string>
    <string name="text_availableCash">Available Cash</string>
    <string name="text_avg_amt">Avg.%1$.2f</string>
    <string name="text_avg_price">Avg. Price</string>
    <string name="text_amt">%1$.2f</string>
    <string name="text_authenticating">Authenticating…</string>
    <string name="text_bid">Bid</string>
    <string name="text_buy">Buy</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_changePassword">Change Password</string>
    <string name="text_close">Close</string>
    <string name="text_commodity">Commodity</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cumulative_pnl">%1$.2f</string>
    <string name="text_current_amount">Current Amt</string>
    <string name="text_darkMode">Dark Mode</string>
    <string name="text_days_pnl">Days PnL</string>
    <string name="text_email">Email</string>
    <string name="text_equity">Equity</string>
    <string name="text_exit">Exit</string>
    <string name="text_filled_quantity">Filled Qty</string>
    <string name="text_filled_ordered_quantity">%1$d/%2$d</string>
    <string name="text_finsol">QuantoTrade</string>
    <string name="text_firstName">First Name</string>
    <string name="text_margin_details">Margin Details</string>
    <string name="text_notifications">Notifications</string>

    <string name="text_getting_details">Getting your details</string>
    <string name="text_hello_welcome">Hello, Welcome to</string>
    <string name="text_help">Help</string>
    <string name="text_high">High</string>
    <string name="text_id">ID</string>
    <string name="text_invested">Invested</string>
    <string name="text_invested_amount">Invested Amt</string>
    <string name="text_internet_not_available">Internet is not available</string>
    <string name="text_ip_address">IP Address</string>
    <string name="connection">Connection</string>

    <string name="text_lastName">Last Name</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_low">Low</string>
    <string name="text_ltp">LTP: %1$s</string>
    <string name="text_market_depth">Market Depth</string>
    <string name="text_market_watch">Market Watch</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_modify">Modify</string>
    <string name="text_name">Name</string>
    <string name="text_no_pending_orders">No Pending Orders Yet</string>
    <string name="text_no_pending_orders_msg">There is no recent stock you ordered. Let\'s make your first investment.</string>
    <string name="text_offer">Offer</string>
    <string name="text_open">Open</string>
    <string name="text_orders">Orders</string>
    <string name="text_order_history">Trade\nConfirmation</string>
    <string name="text_overall_loss">Overall Loss</string>
    <string name="text_password">Password</string>
    <string name="text_pending_orders">Pending\nOrders</string>
    <string name="text_phone">Phone</string>
    <string name="text_please_wait">Please Wait</string>
    <string name="text_pnl">PnL</string>
    <string name="text_pnl_percentage">PnL: %1$s </string>
    <string name="text_popular_searches">Popular Searches</string>
    <string name="text_portfolio">Portfolio</string>
    <string name="text_portfolio_details">Portfolio Details</string>
    <string name="text_portfolio_balance">Portfolio Balance</string>
    <string name="text_price">Price</string>
    <string name="text_profile">Profile</string>
    <string name="text_quantity">Qty</string>
    <string name="text_quantity_purchased">Quantity Purchased</string>
    <string name="text_reconnecting">Reconnecting, please wait…</string>
    <string name="text_register">Register</string>
    <string name="text_removeFromWatchList">Remove From WatchList - %1$d</string>
    <string name="text_repeat_order">Repeat Order</string>
    <string name="text_return_to_watchlist">Return To Watchlist</string>
    <string name="text_search">Search</string>
    <string name="text_sell">Sell</string>
    <string name="text_settings">Settings</string>
    <string name="text_switchUser">Switch User</string>
    <string name="text_time">Time</string>
    <string name="text_todays_pnl_percent">Todays PnL</string>
    <string name="text_total_loss">Total Loss</string>
    <string name="text_total_profit">Total Profit</string>
    <string name="text_tradeBreakdown">Trade Breakdown</string>
    <string name="text_trigger">Trigger</string>
    <string name="text_type">Type</string>
    <string name="text_update">Update</string>
    <string name="text_view_more_details">View more details</string>
    <string name="text_validity">Validity</string>
    <string name="text_volume">Volume</string>
    <string name="text_watchlist">Watchlist</string>
    <string name="text_welcome">Welcome,</string>
    <string name="text_withdraw">Withdraw</string>
    <string name="text_work_quantity">Qty: %1$d</string>
    <string name="text_watchlist_empty">No contracts present. Please use search bar to add instrument to this watchlist.</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_dont_have_an_account">Don\'t have an account?</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_save">save</string>
    <string name="text_enter_your_ip_address">Enter your IP Address</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_remember_ip_address">Remember IP Address</string>
    <string name="text_remember_username">Remember Username</string>
    <string name="order_nbook">Order\nBook</string>
    <string name="text_low_dpr">Low Threshold</string>
    <string name="text_high_dpr">High Threshold</string>
    <string name="text_open_interest">Open Interest</string>
    <string name="text_long_position">Total Buy Qty</string>
    <string name="text_avg_buy">Avg. Buy Price</string>
    <string name="text_short_position">Total Sell Qty</string>
    <string name="text_avg_sell">Avg. Sell Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_noti_text">Stock Market India: Equity benchmarks extended their decline for the third straight session, reflecting investors\' sentiment for safety-first.</string>
    <string name="text_utilized_margin">Utilized Margin</string>
    <string name="text_exchange">Exchange</string>
    <string name="text_open_balance">Open Balance</string>
    <string name="text_intra_day_pnl">Intra-day PnL</string>
    <string name="text_total_pnl">Total PnL</string>
    <string name="text_net_position">Net Position</string>
    <string name="logout_session_expiry">Your QT session has been ended</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="text_modify_order">Modify Order</string>


</resources>