<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="?attr/bg_color"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingBottom="40dp"
    android:paddingTop="20dp">

    <include android:id="@+id/symbolDetails" layout="@layout/item_portfolio_base_details"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="10dp"
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserratsemibold"
            app:fontFamily="@font/montserratsemibold"
            android:background="@drawable/bg_primarycolor_round_corner"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/text_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="10dp"
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_red_round_corner"
            android:fontFamily="@font/montserratsemibold"
            app:fontFamily="@font/montserratsemibold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/text_exit" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/viewMoreDetails"
        android:layout_marginTop="@dimen/large_margin"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/montserratregular"
        app:fontFamily="@font/montserratregular"
        android:text="@string/text_view_more_details"
        android:drawablePadding="@dimen/medium_margin"
        app:drawableEndCompat="@drawable/ic_up" />

</LinearLayout>
