<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include android:id="@+id/toolbar" layout="@layout/custom_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileDetails"
        android:background="@drawable/bg_edittext_register"
        android:layout_margin="@dimen/medium_margin"
        android:padding="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_app_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:textColor="?attr/label_color"
            android:textSize="@dimen/large_text_size"
            android:fontFamily="@font/montserratbold"
            app:fontFamily="@font/montserratbold"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            tools:text="user name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userEmail"
            android:textColor="?attr/label_color"
            android:fontFamily="@font/montserratmedium"
            app:fontFamily="@font/montserratmedium"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            android:layout_marginBottom="@dimen/medium_margin"
            app:layout_constraintStart_toEndOf="@id/avatar"
            tools:text="jfdkdf@fkd.com"
            android:layout_marginStart="@dimen/large_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/firstLayout"
    android:background="@drawable/bg_edittext_register"
    android:layout_margin="@dimen/medium_margin"
    android:padding="@dimen/medium_margin"
    app:layout_constraintTop_toBottomOf="@id/profileDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/medium_margin"
        android:id="@+id/fundsLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_funds"
            app:tint="?attr/icon_tint_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_margin_details"
            android:fontFamily="@font/montserratsemibold"
            app:fontFamily="@font/montserratsemibold"
            android:textColor="?attr/label_color"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginStart="@dimen/large_margin"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileLayout"
        android:gravity="center_vertical"
        android:padding="@dimen/medium_margin"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="?attr/icon_tint_color"
            android:src="@drawable/ic_menu_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_profile"
            android:fontFamily="@font/montserratsemibold"
            app:fontFamily="@font/montserratsemibold"
            android:textColor="?attr/label_color"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginStart="@dimen/large_margin"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/settingsLayout"
        android:padding="@dimen/medium_margin"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="?attr/icon_tint_color"
            android:src="@drawable/ic_menu_settings"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_settings"
            android:fontFamily="@font/montserratsemibold"
            app:fontFamily="@font/montserratsemibold"
            android:textColor="?attr/label_color"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginStart="@dimen/large_margin"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/secondLayout"
        android:background="@drawable/bg_edittext_register"
        android:layout_margin="@dimen/medium_margin"
        android:padding="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/firstLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/medium_margin"
            android:id="@+id/helpLayout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="?attr/icon_tint_color"
                android:src="@drawable/ic_menu_help"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_help"
                android:fontFamily="@font/montserratsemibold"
                app:fontFamily="@font/montserratsemibold"
                android:textColor="?attr/label_color"
                android:textSize="@dimen/medium_text_size"
                android:layout_marginStart="@dimen/large_margin"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/logoutLayout"
            android:padding="@dimen/medium_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="?attr/icon_tint_color"
                android:src="@drawable/ic_menu_logout"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logout"
                android:fontFamily="@font/montserratsemibold"
                app:fontFamily="@font/montserratsemibold"
                android:textColor="?attr/label_color"
                android:textSize="@dimen/medium_text_size"
                android:layout_marginStart="@dimen/large_margin"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/switchUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:fontFamily="@font/montserratsemibold"
        app:fontFamily="@font/montserratsemibold"
       app:layout_constraintTop_toBottomOf="@id/secondLayout"
        android:background="@drawable/bg_primarycolor_round_corner"
        android:text="@string/text_switchUser"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
</LinearLayout>

